--- a/_includes/manuals/3.12/3.2.2_installer_options.md
+++ b/_includes/manuals/3.12/3.2.2_installer_options.md
@@ -146,6 +146,10 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_google' puppet module (<a href="https://github.com/theforeman/foreman_google">foreman_google</a>)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-hdm</td>
+        <td>Enable 'foreman_plugin_hdm' puppet module (<a href="https://github.com/theforeman/foreman_hdm">foreman_hdm</a>)</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-host-extra-validator</td>
         <td>Enable 'foreman_plugin_host_extra_validator' puppet module (<a href="https://github.com/theforeman/foreman_host_extra_validator">foreman_host_extra_validator</a>)</td>
       </tr>
@@ -288,6 +292,10 @@ More information about compute resources can be found in the [Compute Resources 
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dynflow</td>
         <td>Enable 'foreman_proxy_plugin_dynflow' puppet module (<a href="https://github.com/theforeman/smart_proxy_dynflow">smart_proxy_dynflow</a>)</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-hdm</td>
+        <td>Enable 'foreman_proxy_plugin_hdm' puppet module (<a href="https://github.com/theforeman/smart_proxy_hdm">smart_proxy_hdm</a>)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-monitoring</td>
@@ -1428,10 +1436,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>The time an agent waits for one block to be read from an HTTP connection. If nothing is read after the elapsed interval then the connection will be closed.</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--puppet-localconfig</td>
-        <td>The localconfig setting.</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--puppet-logdir</td>
         <td>Override the log directory.</td>
       </tr>
@@ -2278,6 +2282,30 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-tls-disabled-versions</td>
         <td>Disable TLS versions. Version 1.0 is always disabled. For example: ['1.1']</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-enabled</td>
+        <td>enables/disables the HDM plugin</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-hdm-password</td>
+        <td>password of the HDM API user - can be ommited if HDM runs unauthenticated</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-hdm-url</td>
+        <td>the API endpoint of your HDM installation</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-hdm-user</td>
+        <td>email address of the API-role user inside of HDM - can be ommited if HDM runs unauthenticated</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-listen-on</td>
+        <td>proxy feature listens on http, https, or both</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-hdm-version</td>
+        <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-monitoring-collect-status</td>
