--- a/_includes/manuals/3.12/1.2_release_notes.md
+++ b/_includes/manuals/3.12/1.2_release_notes.md
@@ -30,6 +30,14 @@ For more details, see https://projects.theforeman.org/issues/37686.
 
 ### Deprecations
 
+#### Running Foreman on Ubuntu 20.04 (Focal) is deprecated, planned removal in Foreman 3.13
+
+Foreman supports running on Ubuntu 22.04 LTS (Jammy Jellyfish) since 3.11, therefore running on 20.04 is deprecated.
+We plan to drop support for running on 20.04 in Foreman 3.13, so users are encouraged to plan their upgrade.
+
+Note this is for running Foreman itself.
+Clients will remain supported.
+
 #### Running Foreman on Enterprise Linux 8 removal in Foreman 3.13
 
 Running on Enterprise Linux 8 is deprecated since Foreman 3.11.
