--- a/_includes/manuals/3.12/1.2_release_notes.md
+++ b/_includes/manuals/3.12/1.2_release_notes.md
@@ -51,7 +51,6 @@ For more details and discussion, see https://community.theforeman.org/t/drop-sup
 A full list of changes in 3.12.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1836)
 
 ### Release notes for 3.12.0
-
 #### Foreman
 * Bulk Packages wizard - Host search bleeds into package/errata search ([#37768](https://projects.theforeman.org/issues/37768))
 * User search filter for auth_source_type returns error code 500 ([#37767](https://projects.theforeman.org/issues/37767))
@@ -163,12 +162,18 @@ A full list of changes in 3.12.0 is available via [Redmine](https://projects.the
 * Help page should not link libera chat anymore after the migration to matrix ([#37086](https://projects.theforeman.org/issues/37086))
 
 #### Installer
+* PostgreSQL 13 upgrade aborts when user locale doesn't match cluster locale ([#37797](https://projects.theforeman.org/issues/37797))
 * After an OS version upgrade, the GUI still shows the old/wrong Operating System version ([#37726](https://projects.theforeman.org/issues/37726))
 * Disable port 8443 by default on content proxies ([#37701](https://projects.theforeman.org/issues/37701))
 
+#### Installer - External modules
+* Could not find template 'mosquitto/mosquitto.conf' when executing the installer in certain directories ([#37799](https://projects.theforeman.org/issues/37799))
+
 #### Installer - Foreman modules
+* Custom certificates will override server CA with default CA on foreman-proxy-content scenario ([#37817](https://projects.theforeman.org/issues/37817))
 * CVE-2024-7923: Authentication bypass in Pulpcore ([#37787](https://projects.theforeman.org/issues/37787))
 * CVE-2024-7012: Authentication bypass in Foreman ([#37786](https://projects.theforeman.org/issues/37786))
+* Cockpit integration fails with AH: Unsafe URL with %3f URL rewritten without UnsafeAllow3F in foreman-ssl_error_ssl.log ([#37761](https://projects.theforeman.org/issues/37761))
 * Pasing --foreman-proxy-content-enable-docker false can leave smart_proxy_container_gateway in an inconsistent state ([#37707](https://projects.theforeman.org/issues/37707))
 * Correct docroot for Content Proxies's Apache vhost ([#37620](https://projects.theforeman.org/issues/37620))
 * DNS forwarders aren't validated ([#37604](https://projects.theforeman.org/issues/37604))
@@ -180,6 +185,9 @@ A full list of changes in 3.12.0 is available via [Redmine](https://projects.the
 
 #### Packaging - RPMs
 * Make foreman-installer-katello pull in foreman-maintain ([#37663](https://projects.theforeman.org/issues/37663))
+
+#### SELinux
+* websockify doesn't work with SELinux enabled ([#37791](https://projects.theforeman.org/issues/37791))
 
 #### SELinux - Plugins
 * Boot disk based Provisioning fails to generate ISO image for instance client.example.com: ERF42-8093 [Foreman::Exception]: ISO build failed ([#37497](https://projects.theforeman.org/issues/37497))
