--- a/_includes/manuals/nightly/7.3_getting_help.md
+++ b/_includes/manuals/nightly/7.3_getting_help.md
@@ -12,21 +12,9 @@ An online discussion forum is available at https://community.theforeman.org/. Mu
 * [Release Announcements](https://community.theforeman.org/c/release-announcements)
 
 ### Gathering information
-In order to troubleshoot and get relevant data use foreman-debug which collects information about your OS, Foreman and related components.
-If you installed from packages, the command is available to root:
 
-    # foreman-debug
+In order to troubleshoot and get relevant data use `sos report` which collects information about your OS, Foreman and related components:
 
-If you installed from git, you can find it in the Foreman directory:
+    # sos report
 
-    # script/foreman-debug
-
-If you run it without any options, it will collect data, filter out possible
-passwords or tokens and create a tarball which can be safely handed over to
-us.
-
-To upload the tarball to our public server via rsync use:
-
-    # foreman-debug -u
-
-This is a write-only directory (readable only by Foreman core developers), please note that the rsync transmission is UNENCRYPTED.
+It will collect data, filter out possible passwords or tokens and create a tarball which can be safely handed over to us.
