--- a/_includes/manuals/nightly/7.3_getting_help.md
+++ b/_includes/manuals/nightly/7.3_getting_help.md
@@ -1,15 +1,6 @@
-The two primary methods of getting support for Foreman are IRC and discussion forums.
+### Support
 
-### IRC
-We work on the [libera.chat](https://libera.chat/) servers. You can get general support in #theforeman, while development chat takes place in #theforeman-dev.
-
-### Discussion Forums
-
-An online discussion forum is available at https://community.theforeman.org/. Much like IRC, we have discussion areas for general users (support, Q/A, etc), as well as a discussion areas for developers, tutorials and release announcements.
-
-* [General Support](https://community.theforeman.org/c/support)
-* [Development](https://community.theforeman.org/c/support)
-* [Release Announcements](https://community.theforeman.org/c/release-announcements)
+Please see our [Support page](/support.html) for ways to reach us.
 
 ### Gathering information
 In order to troubleshoot and get relevant data use foreman-debug which collects information about your OS, Foreman and related components.
