add upgrade warning that 20.04 is not supported anymore

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -6,6 +6,15 @@ This section will be updated prior to the next release.
 
 ### Upgrade warnings
 
+#### Running Foreman on Ubuntu 20.04 (Focal) is not supported anymore
+
+Foreman supports running on Ubuntu 22.04 LTS (Jammy Jellyfish) since 3.11.
+Running Foreman on Ubuntu 20.04 LTS has been deprecated since 3.12.
+Support for running Foreman on Ubuntu 20.04 LTS has been removed.
+
+Note this is for running Foreman itself.
+Clients will remain supported.
+
 ### Deprecations
 
 ### Release Notes
