add Debian 12 (Bookworm) to docs

--- a/_includes/manuals/nightly/3.3.2_debian_packages.md
+++ b/_includes/manuals/nightly/3.3.2_debian_packages.md
@@ -4,6 +4,7 @@ The Foreman packages should work on the following Debian-based Linux distributio
 #### Distributions
 
 * Debian Linux 11 (Bullseye), amd64
+* Debian Linux 12 (Bookworm), amd64
 * Ubuntu Linux 22.04 LTS (Jammy Jellyfish), amd64
 
 If you encounter any errors during the installation, [please file a bug report!](/contribute.html#Bugreporting)
@@ -15,6 +16,8 @@ Add one of the following lines to your */etc/apt/sources.list* (alternatively in
 ```
 # Debian Bullseye
 deb http://deb.theforeman.org/ bullseye {{page.version}}
+# Debian Bookworm
+deb http://deb.theforeman.org/ bookworm {{page.version}}
 # Ubuntu 22.04 Jammy
 deb http://deb.theforeman.org/ jammy {{page.version}}
 ```
