--- a/_includes/manuals/nightly/3.1.1_supported_platforms.md
+++ b/_includes/manuals/nightly/3.1.1_supported_platforms.md
@@ -15,6 +15,8 @@ The following operating systems are supported by the installer, have packages an
   * Architectures: amd64
 * Debian 11 (Bullseye)
   * Architectures: amd64
+* Debian 12 (Bookworm)
+  * Architectures: amd64
 
 PostgreSQL version 10 or newer.
 
