add headline feature for Debian 12

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -4,6 +4,10 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### Running Foreman on Debian 12 (Bookworm)
+
+Foreman now supports running on Debian 12 (Bookworm).
+
 ### Upgrade warnings
 
 #### Running Foreman on Ubuntu 20.04 (Focal) is not supported anymore
