add 3.11.4 release notes

--- a/_includes/manuals/3.11/1.2_release_notes.md
+++ b/_includes/manuals/3.11/1.2_release_notes.md
@@ -43,6 +43,19 @@ Clients will remain supported.
 
 For more details and discussion, see https://community.theforeman.org/t/drop-support-for-running-on-el8-with-foreman-3-13/38083.
 
+### Release notes for 3.11.4
+#### Installer
+* Checks don’t disable the default CA path which means openssl will use the default system CA path by default ([#37828](https://projects.theforeman.org/issues/37828))
+* PostgreSQL 13 upgrade aborts when user locale doesn't match cluster locale ([#37797](https://projects.theforeman.org/issues/37797))
+
+#### Installer - Foreman modules
+* Custom certificates will override server CA with default CA on foreman-proxy-content scenario ([#37817](https://projects.theforeman.org/issues/37817))
+
+#### Installer - foreman-installer script
+* Disconnected upgrade fails to switch postgresql dnf module ([#37874](https://projects.theforeman.org/issues/37874))
+
+*A full list of changes in 3.11.4 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1901)*
+
 ### Release notes for 3.11.2
 #### Foreman - API
 * Host Creation via GraphQL only as Admin ([#37765](https://projects.theforeman.org/issues/37765))
